# cameron-code

./: .gitignore  README.md  pyproject.toml
.claude/commands/: analyze.md  greet.md
src/cameron_code/: __init__.py  client.py  providers.py  tools.py  tui.py
tests/: __init__.py  test_hooks.py  test_mcp_tools.py  test_native_tools.py  test_permissions.py  test_providers.py  test_slash_commands.py  test_slash_commands_workaround.py  test_subagents.py
