[project]
name = "cameron-code"
version = "0.1.0"
description = "Tinkering with Claude Code SDK - custom TUI, tools, and experiments"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "textual>=0.89.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
cameron-code = "cameron_code.tui:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cameron_code"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
